src/objects/KnowledgeArticle__kav.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Additional information such as KB articles, references to the original documentation (e.g. Admin Guide or Installation Guide) or any other resource that helped in documenting this article.</description>
        <inlineHelpText>Additional information such as KB articles, references to the original documentation (e.g. Admin Guide or Installation Guide) or any other resource that helped in documenting this article.</inlineHelpText>
        <label>Additional Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>2018 Service Cloud Implementation - Used for Knowledge team article workflow process</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted for Approval</fullName>
                    <default>true</default>
                    <label>Not Submitted for Approval</label>
                </value>
                <value>
                    <fullName>Submitted for Content Approval</fullName>
                </value>
                <value>
                    <fullName>Approved Content Submitted for Admin Approval</fullName>
                </value>
                <value>
                    <fullName>Approved for Publication</fullName>
                </value>
                <value>
                    <fullName>Content Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Admin Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled_by_Submitter</fullName>
                    <label>Recalled by Submitter</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <isActive>false</isActive>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                    <isActive>false</isActive>
                    <label>Recalled</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Submitted for Review</fullName>
                    <isActive>false</isActive>
                    <label>Submitted for Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Author_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User who authored the Knowledge Article.  May be a currently inactive legacy User.</description>
        <label>Article Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Author__c</fullName>
        <description>Pre-Service Cloud Go Live, field to be used to populate the Article Author; Post Go Live, this will be populated via Workflow Rule &amp; Field Update off of Created By. *** For reporting purposes, Pivotal users should use Article Author to capture all articles since anything migrated will have Created By = System Integration</description>
        <label>Article Author</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Created_from_Case__c</fullName>
        <defaultValue>"None"</defaultValue>
        <description>2018 Service Cloud Implementation - Shows the Case # that initiated need for the article or "None" if not initiated by a Case; populated by trigger.</description>
        <label>Article Created from Case #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link_Formula__c</fullName>
        <description>Formula to pull Knowledge Article link in Lightning</description>
        <formula>'pivotal.lightning.force.com/lightning/r/Knowledge__kav/'&amp;CASESAFEID( Id )&amp;'/view'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number_Hyperlink__c</fullName>
        <formula>HYPERLINK("https://pivotal.lightning.force.com/one/one.app#/sObject/"&amp;Id&amp;"/view", ArticleNumber)</formula>
        <label>Article Number*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Group_Name__c</fullName>
        <description>2018 Service Cloud Implementation - Used for Pivotal Product Management group</description>
        <formula>CASE( Product2__c ,
"Alpine Chorus for Pivotal Data Suite","Greenplum",
"Datometry Hyper-Q for Pivotal Data Suite","Greenplum",
"Datometry Workload Manager", "Greenplum",
"Open Source Redis","Pivotal Functional Service",
"Open Source Spring.io","Pivotal Functional Service",
"Pivotal Cloud Cache","GemFire",
"Pivotal Cloud Foundry Elastic Runtime","Pivotal Application Service",
"Pivotal Cloud Foundry Elastic Runtime Suite","Pivotal Application Service",
"Pivotal Cloud Foundry Operations Manager","Pivotal Application Service",
"Pivotal Cloud Foundry Operations Manager v2","Pivotal Application Service",
"Pivotal Command Center","Greenplum",
"Pivotal Container Service (PKS)","Pivotal Container Service",
"Pivotal GemFire","GemFire",
"Pivotal GemFire for Pivotal Cloud Foundry","GemFire",
"Pivotal GemFire XD","GemFire",
"Pivotal GPText","Greenplum",
"Pivotal Greenplum","Greenplum",
"Pivotal Greenplum Command Center","Greenplum",
"Pivotal Greenplum Text","Greenplum",
"Pivotal HD","Pivotal HD",
"Pivotal HDB","Pivotal HD",
"Pivotal HDP","Pivotal HD",
"Pivotal Mobile Services Suite","Pivotal Functional Service",
"Pivotal R","Greenplum",
"Pivotal RabbitMQ","Pivotal Functional Service",
"Pivotal tc Server","Pivotal Functional Service",
"Pivotal Tracker for Pivotal Cloud Foundry","Pivotal Functional Service",
"Pivotal VRP","Greenplum",
"Pivotal Web Server","Pivotal Functional Service",
"CSR","General CSR",
"Gitlab Enterprise Plus for Pivotal Cloud Foundry","Pivotal Application Service",
"Greenplum MapReduce","Greenplum",
"ISS Knowtify for Pivotal Cloud Foundry","Pivotal Application Service",
"Mad lib","Greenplum",
"Open Source Apache HTTP Server","Pivotal Functional Service",
"Open Source Apache Tomcat","Pivotal Functional Service",
"Open Source Groovy &amp; Grails","Greenplum",
"Open Source RabbitMQ","Pivotal Functional Service",
"Open Source SpringXD","Pivotal Functional Service",
"OSS Support for Spring Cloud Data Flow","Pivotal Functional Service",
"Pivotal Data Dispatch","Greenplum",
"Pivotal RabbitMQ for Pivotal Cloud Foundry","Pivotal Functional Service",
"Pivotal Services Suite for Pivotal Cloud Foundry","Pivotal Functional Service",
"Pivotal Tracker Enterprise SaaS","Pivotal Functional Service",
"Redis for Pivotal Cloud Foundry","Pivotal Functional Service",
"Pivotal Web Services","Pivotal Web Services",
"Other","General CSR",
"None")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>2018 Service Cloud Implementation - Article assigned to be written by</description>
        <formula>AssignedToId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Description of what caused the problem.</description>
        <inlineHelpText>Description of what caused the problem.</inlineHelpText>
        <label>Cause</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <description>2018 Service Cloud Implementation - Checklist, Troubleshooting Guide articles</description>
        <label>Checklist</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Community_Article_URL__c</fullName>
        <formula>IF(
OR(
IsVisibleInPkb = TRUE,
IsVisibleInCsp = TRUE
),

HYPERLINK("https://community.pivotal.io/s/article/"&amp;UrlName,"https://community.pivotal.io/s/article/"&amp;UrlName),

""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Article URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>2018 Service Cloud Implementation</description>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>2018 Service Cloud Implementation - Concept article</description>
        <label>Description</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <description>2018 Service Cloud Implementation - Tools article</description>
        <label>Expected Results</label>
        <length>125000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>2018 Service Cloud Implementation - This field is used to store the submitters email address in approval process
This is not used in page layout</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <inlineHelpText>What is the answer to the question, or how do you perform the task?</inlineHelpText>
        <label>Instructions</label>
        <length>2416</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Comment__c</fullName>
        <description>2018 Service Cloud Implementation - comments for internal Pivotal</description>
        <inlineHelpText>Comments for internal Pivotal use - not customer-facing</inlineHelpText>
        <label>Internal Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <description>2018 Service Cloud Implementation - Concept article</description>
        <label>Introduction</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Issue</description>
        <inlineHelpText>What is the problem? What is the context? Where is the problem being seen? When is the problem occurring? Use the customer's own words, that is, describe the problem from the customer's perspective.</inlineHelpText>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Knowledge_ID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Knowledge ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Mgr_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field for POC sandbox article reformatting project - users working on project should check this if they have question about the article they are reformatting. The Knowledge Mgr will then review/complete the article reformatting</description>
        <inlineHelpText>Temporary field for POC sandbox article reformatting project - users working on project should check this if they have question about the article they are reformatting. The Knowledge Mgr will then review/complete the article reformatting</inlineHelpText>
        <label>Knowledge Mgr Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_URL__c</fullName>
        <description>2018 Service Cloud Implementation - url from ZenDesk</description>
        <label>Legacy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes for Pivotal Internal only</description>
        <inlineHelpText>Notes for Pivotal Internal only</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <description>2018 Service Cloud Implementation</description>
        <label>OS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>2018 Service Cloud Implementation - Concept, Tools articles</description>
        <label>Options</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date__c</fullName>
        <description>Pre-Service Cloud Go Live, field to be used to populate the article Created date from Zendesk; Post Go Live, this will be populated via Workflow Rule &amp; Field Update off of Article Created Date. *** For reporting purposes, Pivotal users should use Original Created Date to capture all articles since anything migrated will have Article Created Date= date the articles were migrated to SFDC</description>
        <label>Original Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Publication_Date__c</fullName>
        <description>Pre-Service Cloud Go Live, field to be used to populate the article Created date from Zendesk; Post Go Live, this will be populated via Workflow Rule &amp; Field Update off of Article Created Date. *** For reporting purposes, Pivotal users should use Original Created Date to capture all articles since anything migrated will have Article Created Date= date the articles were migrated to SFDC</description>
        <label>Original Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>2018 Service Cloud Implementation - Troubleshooting Guide article</description>
        <label>Overview</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <description>2018 Service Cloud Implementation - How To, Tools articles</description>
        <label>Procedure</label>
        <length>125000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <description>2018 Service Cloud Implementation - KEEP This Product field.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <description>2018 Service Cloud Implementation</description>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>2018 Service Cloud Implementation - How To, Tools articles</description>
        <label>Purpose</label>
        <length>125000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>What is the question? What task are they trying to perform? Use the customer's own words, that is, describe the request from the customer's perspective</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reformatting_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary POC sandbox field for team working on the manual reformatting of articles for migration; to be checked when reformatting of article has been completed</description>
        <inlineHelpText>Temporary field for reformatting project; to be checked when reformatting of article has been completed</inlineHelpText>
        <label>Reformatting Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_KB_Article__c</fullName>
        <description>URL Link to another related article.</description>
        <inlineHelpText>URL Link to another related article.</inlineHelpText>
        <label>Related KB Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <inlineHelpText>What actions can the reader take to resolve or work around the described problem?</inlineHelpText>
        <label>Resolution</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>2018 Service Cloud Implementation</description>
        <label>Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Component__c</fullName>
        <description>2018 Service Cloud Implementation</description>
        <label>Sub Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Summary of the article that will appear along with the Article Title in any search results of the Knowledge Base.</description>
        <inlineHelpText>Summary of the article that will appear along with the Article Title in any search results of the Knowledge Base.</inlineHelpText>
        <label>Summary</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <description>Description of the symptoms or problem statement.</description>
        <inlineHelpText>Description of the symptoms or problem statement.</inlineHelpText>
        <label>Symptom</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <description>2018 Service Cloud Implementation - Concept article</description>
        <label>Synopsis</label>
        <length>75000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tool_Attachments__c</fullName>
        <description>2018 Service Cloud Implementation - Tools article</description>
        <label>Tool Attachments</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Version_History__c</fullName>
        <description>2018 Service Cloud Implementation - Tools article</description>
        <label>Version History</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk_Legacy_ID__c</fullName>
        <description>2018 Service Cloud Implementation - Legacy ID field for Data Migration</description>
        <label>Zendesk Legacy ID</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <label>Knowledge Article</label>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <listViews>
        <fullName>Articles_Pending_Approval</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>Approval_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Content Approval</value>
        </filters>
        <label>2. Articles Pending CONTENT Approval</label>
    </listViews>
    <listViews>
        <fullName>Articles_Pending_KNOWLEDGE_ADMIN_Approva</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>Approval_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved Content Submitted for Admin Approval</value>
        </filters>
        <label>2. Articles Pending ADMIN Approval</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>1. Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>Product2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>1. Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>1. Published Articles</label>
    </listViews>
    <recordTypes>
        <fullName>BreakFix</fullName>
        <active>true</active>
        <label>xBreak Fix- Deprecated-DO NOT USE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Break_Fix_New</fullName>
        <active>true</active>
        <label>Break Fix</label>
    </recordTypes>
    <recordTypes>
        <fullName>Checklist</fullName>
        <active>true</active>
        <label>FAQ and Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Concept</fullName>
        <active>true</active>
        <label>Concept</label>
    </recordTypes>
    <recordTypes>
        <fullName>HowTo</fullName>
        <active>false</active>
        <label>xHow To- Deprecated-DO NOT USE</label>
    </recordTypes>
    <recordTypes>
        <fullName>How_To_New</fullName>
        <active>true</active>
        <label>How To</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Only</fullName>
        <active>true</active>
        <label>Internal Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tools</fullName>
        <active>true</active>
        <label>Tools</label>
    </recordTypes>
    <recordTypes>
        <fullName>TroubleshootingGuide</fullName>
        <active>true</active>
        <label>Troubleshooting Guide</label>
    </recordTypes>
    <validationRules>
        <fullName>BreakFix_Article_Required_Fields</fullName>
        <active>false</active>
        <description>Require Symptoms and Products on any Break Fix Record Type Knowledge Article.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName  = "BreakFix",
    OR(
       ISBLANK(TEXT(Product2__c)),
       LEN(Symptom__c)= 0,
       LEN(Resolution__c)= 0,
       ISBLANK(Article_Author_Lookup__c) 
      )
   )

/* Symptom__c,Resolution__c are Rich Text Fields that does not work with ISBLANK to determine if the field is empty. Use LEN function instead */</errorConditionFormula>
        <errorMessage>Knowledge Validation Error: Product, Symptom, Resolution and Article Author are REQUIRED fields to Save Article.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checklist_Article_Required_Fields</fullName>
        <active>false</active>
        <description>Require Checklist and Products on any Checklist Record Type Knowledge Article.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName  = "Checklist",
    OR(
       ISBLANK(TEXT(Product2__c)),
       LEN(Checklist__c)= 0,
       ISBLANK(Article_Author_Lookup__c) 
      )
   )

/* Checklist__c is a Rich Text Field that does not work with ISBLANK to determine if the field is empty. Use LEN function instead */</errorConditionFormula>
        <errorMessage>Knowledge Validation Error: Product, Checklist and Article Author are REQUIRED fields to Save Article.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Article_Required_Fields</fullName>
        <active>false</active>
        <description>Require Description and Products on any Concept Record Type Knowledge Article.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName  = "Concept",
    OR(
       ISBLANK(TEXT(Product2__c)),
       LEN(Description__c)= 0,
       ISBLANK(Article_Author_Lookup__c) 
      )
   )

/* Description__c is a Rich Text Field that does not work with ISBLANK to determine if the field is empty. Use LEN function instead */</errorConditionFormula>
        <errorMessage>Knowledge Validation Error: Product, Description and Article Author are REQUIRED fields to Save Article.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>How_To_Article_Required_Fields</fullName>
        <active>false</active>
        <description>Require Purpose, Procedure and Products on any How To Record Type Knowledge Article.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName  = "HowTo",
    OR(
       ISBLANK(TEXT(Product2__c)),
       LEN(Purpose__c)= 0,
       LEN(Procedure__c)= 0,
       ISBLANK(Article_Author_Lookup__c) 
      )
   )

/* Purpose and Procedure are Rich Text Fields that does not work with ISBLANK to determine if the field is empty. Use LEN function instead */</errorConditionFormula>
        <errorMessage>Knowledge Validation Error: Product, Purpose, Procedure and Article Author are REQUIRED fields to Save Article.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tools_Article_Required_Fields</fullName>
        <active>false</active>
        <description>Require Purpose, Procedure, Expected Results and Products on any Tools Record Type Knowledge Article.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName  = "Tools",
    OR(
       ISBLANK(TEXT(Product2__c)),
       LEN(Purpose__c)= 0,
       LEN(Procedure__c)= 0,
       LEN(Expected_Results__c)= 0,
       ISBLANK(Article_Author_Lookup__c) 
      )
   )

/* Purpose, Expected Results and Procedure are Rich Text Fields that does not work with ISBLANK to determine if the field is empty. Use LEN function instead */</errorConditionFormula>
        <errorMessage>Knowledge Validation Error: Product, Purpose, Procedure, Expected Results and Article Author are REQUIRED fields to Save Article.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Troubleshooting_Article_Required_Fields</fullName>
        <active>false</active>
        <description>Require Overview, Symptom, Purpose, Cause and Products on any Troubleshooting Guide Record Type Knowledge Article.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName  = "TroubleshootingGuide",
    OR(
       ISBLANK(TEXT(Product2__c)),
       LEN(Purpose__c)= 0,
       LEN(Overview__c)= 0,
       LEN(Symptom__c)= 0,
       LEN(Cause__c)= 0,
       ISBLANK(Article_Author_Lookup__c) 
      )
   )

/* Purpose, Overview, Symptom and Cause are Rich Text Fields that does not work with ISBLANK to determine if the field is empty. Use LEN function instead */</errorConditionFormula>
        <errorMessage>Knowledge Validation Error: Product, Purpose, Overview, Symptom, Cause and Article Author are REQUIRED fields to Save Article.</errorMessage>
    </validationRules>
</CustomObject>